# modelling

./: .gitignore  Cargo.toml  README.md  bench_results copy.jl
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: .gitignore  Cochineal-OFL.txt
benches/: bevy_bench.rs  profile_triangulation.rs  triangulation.rs
doc/: cursors.md  start.md
editor/: Cargo.toml
editor/src/: main.rs
examples/: 2d.rs  bevy_examples.rs  box.rs  custom_mesh_type.rs  fern.rs  fps_bench.rs  loft.rs  path.rs  spiral.rs  svg.rs  text.rs  triangulation.rs  zoo.rs  zoo_2d.rs
examples/common/: bevy.rs
playground/bevy/: Cargo.toml
playground/bevy/src/: main.rs
playground/fps_bench/: Cargo.toml
playground/fps_bench/FPSBench/: Manifest.toml  Project.toml
playground/fps_bench/FPSBench/src/: FPSBench.jl  main.jl
playground/fps_bench/src/: main.rs
playground/svg/: Cargo.toml
playground/svg/src/: main.rs
playground/wgpu/: Cargo.toml
playground/wgpu/src/: main.rs  shader.wgsl
src/: lib.rs
src/backends/: mod.rs
src/backends/bevy/: mesh2d.rs  mesh3d.rs  vertex_payload_2d.rs  vertex_payload_3d.rs
src/backends/bevy/gizmo/: text.rs
src/backends/bevy/math/: mat5.rs  polygon.rs  vec2.rs  vec3.rs  vec4.rs
src/backends/nalgebra/: default_vertex_payload.rs  mesh2d.rs  mesh_nd.rs  mod.rs  vertex_payload_2d.rs
src/backends/nalgebra/math/: mod.rs  polygon.rs  rotate.rs  transform_n.rs  vec2.rs  vec_n.rs
src/backends/native/: mod.rs
src/backends/native/math/: transform_n.rs  vec2.rs  vec_n.rs
src/backends/svg/: mod.rs
src/bevy/: mesh.rs  mesh2d.rs  mesh3d.rs  mod.rs  vertex_payload.rs  vertex_payload_2d.rs  vertex_payload_3d.rs
src/bevy/gizmo/: mod.rs  text3d.rs
src/bevy/math/: mat5.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs
src/extensions/: mod.rs
src/extensions/bevy/: mesh2d.rs  mesh3d.rs  mod.rs  vertex_payload_2d.rs  vertex_payload_3d.rs
src/extensions/bevy/gizmo/: mod.rs  text.rs  text3d.rs
src/extensions/bevy/math/: mat5.rs  mod.rs  polygon.rs  quat.rs  vec2.rs  vec3.rs  vec4.rs
src/extensions/mini_renderer/: lighting.rs  mod.rs  settings.rs  svg.rs
src/extensions/nalgebra/: default_vertex_payload.rs  index.rs  mesh2d.rs  mesh_nd.rs  mod.rs
src/extensions/nalgebra/math/: affine.rs  mod.rs  polygon.rs  rotate.rs  transform.rs  transform_n.rs  vec2.rs  vec3.rs  vec4.rs  vec_n.rs
src/extensions/svg/: mod.rs  svg.rs
src/extensions/wgpu/: mod.rs
src/gizmo/: mod.rs
src/gizmo/bevy/: mod.rs
src/gizmo/bevy/text/: mod.rs  text3d.rs
src/halfedge/: mod.rs
src/halfedge/edge/: basics.rs  halfedge.rs  iterator.rs  mod.rs
src/halfedge/face/: iterator.rs  mod.rs
src/halfedge/mesh/: adaptor.rs  basics.rs  check.rs  halfedge.rs  iterator.rs  mod.rs  pseudo_winged.rs  topology.rs
src/halfedge/mesh/builder/: builder.rs  edge.rs  face.rs  halfedge.rs  import.rs  mod.rs  path.rs  semi.rs  subdivision.rs  vertex.rs
src/halfedge/primitives/: mod.rs
src/halfedge/vertex/: basics.rs  iterator.rs  mod.rs  transform.rs
src/math/: index_type.rs  line_segment.rs  mod.rs  polygon.rs  position.rs  quaternion.rs  scalar.rs  transform.rs  transformable.rs  vector.rs  vector2d.rs  vector3d.rs  vector4d.rs  zero.rs
src/math/impls/: f32.rs  f64.rs  mod.rs
src/math/impls/bevy/: mat5.rs  mod.rs  polygon.rs  transform.rs  vec2.rs  vec3.rs  vec4.rs
src/math/impls/f32/: mod.rs
src/math/impls/f64/: mod.rs
src/mesh/: mod.rs  triangulation.rs
src/mesh/adaptor/: edge.rs  face.rs  filter.rs  mod.rs  target.rs  valid.rs  vertex.rs
src/mesh/cursor/: cursor.rs  data.rs  edge.rs  edge_basics.rs  edge_mut.rs  face.rs  face_basics.rs  face_mut.rs  macro_helper.rs  mod.rs  vertex.rs  vertex_basics.rs  vertex_mut.rs
src/mesh/cursor/edge/: basics.rs  builder.rs  immutable.rs  immutable_valid.rs  mod.rs  mutable.rs  mutable_valid.rs  valid.rs
src/mesh/cursor/face/: basics.rs  builder.rs  immutable.rs  immutable_valid.rs  mod.rs  mutable.rs  mutable_valid.rs  valid.rs
src/mesh/cursor/vertex/: basics.rs  builder.rs  immutable.rs  immutable_valid.rs  mod.rs  mutable.rs  mutable_valid.rs  valid.rs
src/mesh/edge/: basics.rs  curved.rs  halfedge.rs  mod.rs  payload.rs
src/mesh/face/: basics.rs  face3d.rs  geometry.rs  islands.rs  mod.rs  payload.rs
src/mesh/mesh/: basics.rs  builder.rs  check.rs  curved.rs  fonts.rs  geometry.rs  halfedge.rs  halfedge_builder.rs  import.rs  iso.rs  mesh_type.rs  mod.rs  netsci.rs  normals.rs  path_builder.rs  payload.rs  position.rs  svg.rs  tesselate.rs  topology.rs  transform.rs  triangulate.rs
src/mesh/vertex/: basics.rs  halfedge.rs  interpolator.rs  iterator.rs  mod.rs  payload.rs  transform.rs
src/operations/: debug.rs  edge.rs  extrude.rs  face.rs  halfedge.rs  loft.rs  mod.rs  subdivision.rs  vertex.rs
src/primitives/: misc.rs  mod.rs  plane.rs  polygon.rs  prismatoid.rs  regular_polygon.rs  sphere.rs
src/representation/: deletable.rs  mod.rs
src/representation/edge/: iterator.rs  mod.rs
src/representation/edge/payload/: mod.rs
src/representation/face/: geometry.rs  iterator.rs  mod.rs
src/representation/face/payload/: mod.rs
src/representation/face/tesselate/: convex.rs  delaunay.rs  ear.rs  ear_clipping.rs  min_weight.rs  mod.rs  triangulation.rs
src/representation/mesh/: build.rs  check.rs  geometry.rs  iterator.rs  mesh_type.rs  mod.rs  topology.rs  transform.rs
src/representation/mesh/bevy/: mod.rs
src/representation/mesh/builder/: edge.rs  extrude.rs  face.rs  loft.rs  mod.rs  subdivision.rs  vertex.rs
src/representation/mesh/normals/: mod.rs
src/representation/mesh/payload/: mod.rs
src/representation/mesh/primitives/: cuboid.rs  frustum.rs  misc.rs  mod.rs  plane.rs  prismatoid.rs  regular_polygon.rs  (+1 more)
src/representation/vertex/: iterator.rs  mod.rs
src/tesselate/: convex.rs  delaunay.rs  ear_clipping.rs  fixed_n.rs  min_weight.rs  min_weight_dynamic.rs  min_weight_greedy.rs  mod.rs
src/tesselate/delaunay/: mod.rs
src/tesselate/sweep/: chain.rs  interval.rs  mod.rs  point.rs  status.rs  sweep.rs  vertex_type.rs
src/util/: deletable.rs  iter.rs  iterator.rs  misc.rs  mod.rs
(+19 files in other folders)
