[package]
name = "procedural_modelling"
description = "A framework-agnostic Procedural Modelling crate."
version = "0.2.1"
edition = "2021"
categories = ["graphics", "rendering", "game-development"]
keywords = ["gamedev", "graphics", "procedural", "meshes", "modelling"]
homepage = "https://bevy-procedural.org/modelling"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bevy-procedural/modelling"
documentation = "https://docs.rs/procedural_modelling"
rust-version = "1.81.0"
include = ["src/**/*", "doc/**/*", "examples/**/*", "README.md", "Cargo.toml"]

[lib]
name = "procedural_modelling"
path = "src/lib.rs"
crate-type = ["rlib"]

[workspace]
members = ["playground/bevy", "playground/wgpu"]

[workspace.lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
map_flatten = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"

[lints]
workspace = true

[dependencies]
bevy = { version = "^0.15.0", default-features = false, optional = true }
itertools = "^0.13.0"
meshopt = { version = "^0.3.0", optional = true }
rand = "^0.8.5"
spade = "^2.12.1"
usvg = { version = "0.44.0", optional = true }
criterion = { version = "0.5.1", features = ["html_reports"], optional = true }
lazy_static = "1.5.0"
ab_glyph = { version = "0.2.29", optional = true }
wgpu = { version = "23.0.1", optional = true }
nalgebra = { version = "0.33.0", optional = true }
num-traits = "0.2.19"

[features]
default = ["wgpu", "netsci", "fonts"]
netsci = ["nalgebra"]
wgpu = ["dep:wgpu", "nalgebra"]
bevy = ["dep:bevy", "bevy/bevy_core_pipeline"]
gizmo = ["bevy", "bevy/bevy_text", "bevy/bevy_ui"]
example_deps = ["bevy", "bevy/default"]
svg = ["dep:usvg"]
nalgebra = ["dep:nalgebra"]
fonts = ["dep:ab_glyph"]
bevy_dynamic = ["bevy/dynamic_linking"]
meshopt = ["dep:meshopt"]
benchmarks = ["dep:criterion"]
sweep_debug = []
sweep_debug_print = ["sweep_debug"]

[[example]]
name = "box"
path = "examples/box.rs"
doc-scrape-examples = true
required-features = ["example_deps"]

[[example]]
name = "fps_bench"
path = "examples/fps_bench.rs"
doc-scrape-examples = true
required-features = ["example_deps"]

[[example]]
name = "spiral"
path = "examples/spiral.rs"
doc-scrape-examples = true
required-features = ["example_deps"]

[[bench]]
name = "triangulation"
harness = false
required-features = ["benchmarks"]

# Enable a small amount of optimization in debug mode
[profile.fast-dev]
inherits = "dev"
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.fast-dev.package."*"]
inherits = "dev"
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
