[package]
name = "editor"
description = "An Egui-based editor for the procedural_modelling crate"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = { version = "^0.14.2", default-features = false, features = [
    "bevy_sprite",
    "bevy_pbr",
    "bevy_winit",
    "tonemapping_luts",
] }
bevy-inspector-egui = "^0.27.0"
bevy_panorbit_camera = { version = "^0.20.0", features = ["bevy_egui"] }

[dependencies.procedural_modelling]
path = "../"
features = ["bevy", "meshopt", "dynamic"]
