[package]
name = "playground_wgpu"
description = "A wgpu-based editor for the procedural_modelling crate"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
wgpu = { version = "23.0.1" }
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
pollster = "0.2"
log = "0.4"
glam = "0.13"
bytemuck = { version = "1.20", features = ["derive"] }

[dependencies.procedural_modelling]
path = "../../"
features = ["wgpu", "svg", "fonts"]
