[package]
name = "playground_wgpu"
description = "A wgpu-based editor for the procedural_modelling crate"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
wgpu = { version = "24.0" }
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.11"
pollster = "0.4"
log = "0.4"
glam = "0.30"
bytemuck = { version = "1.22", features = ["derive"] }

[dependencies.procedural_modelling]
path = "../../"
features = ["wgpu", "svg", "fonts"]
